--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,6 +4,7 @@ learning_rate: 2.0e-3
 num_train_epochs: 2000
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 8
+save_strategy: "best"
 gradient_checkpointing: true
 logging_steps: 25
 save_steps: 2500
